--- a/examples/python.ipynb
+++ b/examples/python.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# This only needs to be done once\n",
-    "jl.seval('import Pkg; Pkg.add(\"https://github.com/bmad-sim/SciBmad.jl\")')"
+    "jl.seval('import Pkg; Pkg.add(url=\"https://github.com/bmad-sim/SciBmad.jl\")')"
    ]
   },
   {
