reorder notebooks, bump NFF, clean precompile script

--- a/examples/python.ipynb
+++ b/examples/python.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "dc2130c5",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "122aae65-2770-4ed8-8e42-b8d0dc9e778d",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "a4b9d39d",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "4c9dc7e6",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "b88402ce",
    "metadata": {},
    "outputs": [
@@ -152,19 +152,19 @@
       ],
       "text/plain": [
        "Table with 23 columns and 11 rows:\n",
-       "      s     phi_1       beta_1   alpha_1    phi_2      beta_2   alpha_2    phi_3         eta_1     ⋯\n",
-       "    ┌───────────────────────────────────────────────────────────────────────────────────────────────\n",
-       " 1  │ 0.0   0.0         25.7461  -1.9335    0.0        7.21098  0.572616   0.0           0.711731  ⋯\n",
-       " 2  │ 0.5   0.00305255  25.7461  1.93356    0.0111833  7.21098  -0.572616  -4.02963e-10  0.711882  ⋯\n",
-       " 3  │ 0.7   0.00430772  24.98    1.89675    0.0155274  7.44739  -0.609446  -5.64148e-10  0.701198  ⋯\n",
-       " 4  │ 1.3   0.00831212  22.7702  1.78632    0.0277257  8.24502  -0.719935  -1.0477e-9    0.669145  ⋯\n",
-       " 5  │ 7.3   0.0818501   7.95426  0.68254    0.0986311  23.5136  -1.82482   0.0126764     0.419855  ⋯\n",
-       " 6  │ 7.9   0.0944804   7.20156  0.571968   0.102511   25.7697  -1.93531   0.0126764     0.402052  ⋯\n",
-       " 7  │ 8.4   0.105678    7.20155  -0.571951  0.105561   25.7697  1.93531    0.0126764     0.402201  ⋯\n",
-       " 8  │ 8.6   0.110028    7.4377   -0.608808  0.106815   25.0029  1.89848    0.0126764     0.408256  ⋯\n",
-       " 9  │ 9.2   0.122242    8.23461  -0.719378  0.110815   22.791   1.78799    0.0126764     0.42642   ⋯\n",
-       " 10 │ 15.2  0.193223    23.4922  -1.82307   0.184274   7.96441  0.683105   0.0255521     0.679318  ⋯\n",
-       " 11 │ 15.8  0.197106    25.7461  -1.9335    0.196888   7.21098  0.572616   0.0255521     0.711731  ⋯"
+       "      s     phi_1       beta_1   alpha_1    phi_2      beta_2   alpha_2    phi_3         eta_1     eta_2        ⋯\n",
+       "    ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+       " 1  │ 0.0   0.0         25.7461  -1.9335    0.0        7.21098  0.572616   0.0           0.711731  8.67769e-17  ⋯\n",
+       " 2  │ 0.5   0.00305255  25.7461  1.93356    0.0111833  7.21098  -0.572616  -4.02963e-10  0.711882  8.67769e-17  ⋯\n",
+       " 3  │ 0.7   0.00430772  24.98    1.89675    0.0155274  7.44739  -0.609446  -5.64148e-10  0.701198  8.80705e-17  ⋯\n",
+       " 4  │ 1.3   0.00831212  22.7702  1.78632    0.0277257  8.24502  -0.719935  -1.0477e-9    0.669145  9.19512e-17  ⋯\n",
+       " 5  │ 7.3   0.0818501   7.95426  0.68254    0.0986311  23.5136  -1.82482   0.0126764     0.419855  1.30759e-16  ⋯\n",
+       " 6  │ 7.9   0.0944804   7.20156  0.571968   0.102511   25.7697  -1.93531   0.0126764     0.402052  1.34639e-16  ⋯\n",
+       " 7  │ 8.4   0.105678    7.20155  -0.571951  0.105561   25.7697  1.93531    0.0126764     0.402201  1.34639e-16  ⋯\n",
+       " 8  │ 8.6   0.110028    7.4377   -0.608808  0.106815   25.0029  1.89848    0.0126764     0.408256  1.33346e-16  ⋯\n",
+       " 9  │ 9.2   0.122242    8.23461  -0.719378  0.110815   22.791   1.78799    0.0126764     0.42642   1.29465e-16  ⋯\n",
+       " 10 │ 15.2  0.193223    23.4922  -1.82307   0.184274   7.96441  0.683105   0.0255521     0.679318  9.06577e-17  ⋯\n",
+       " 11 │ 15.8  0.197106    25.7461  -1.9335    0.196888   7.21098  0.572616   0.0255521     0.711731  8.67769e-17  ⋯"
       ],
       "text/tab-separated-values": [
        "0.0\t0.0\t25.7461267934704\t-1.9334971087799893\t0.0\t7.210976055428953\t0.5726159514985499\t0.0\t0.7117308078284412\t8.677692406696553e-17\t0.05402207415829668\t-6.467888247580537e-18\t1.0\t4.037520933160633e-31\t-2.2224004801661462e-30\t1.5498785351652845e-30\t-8.531103263046536e-30\t2.5673907444456746e-17\t-3.469446951953614e-18\t1.9503102460948876e-33\t2.5494277617600177e-34\t3.552713678800501e-15\t0.0\n",
@@ -180,7 +180,7 @@
        "15.799999999999997\t0.19710619563624432\t25.746126793470516\t-1.9334971087799986\t0.19688808477433156\t7.210976055428943\t0.5726159514985495\t0.025552060330664827\t0.7117308078284412\t8.677692406696548e-17\t0.05402207415829678\t-6.4678882475805374e-18\t1.0\t-1.8859441647139994e-31\t1.0380932474685913e-30\t1.4422646530409833e-30\t-7.938756753233941e-30\t-1.6514567491299204e-16\t-2.0816681711721685e-17\t-1.7089824301048828e-33\t-1.0661670112927294e-33\t7.105427357601002e-15\t0.0\n"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,21 +198,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8aed78e",
+   "id": "3ed90618-e246-409e-86c2-3e59440c31ea",
    "metadata": {},
    "source": [
-    "Let's compute the transport matrix for this FODO cell using automatic differentiation (AD). Because it is a periodic (closed) geometry, we first need to find the closed orbit. We then will expand for small deviations around this orbit."
+    "Let's compute the transport matrix for this FODO cell using automatic differentiation (AD). Because it is a periodic (closed) geometry, need to expand around the closed orbit. The closed orbit is computed in the `twiss` call"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "7d07240c",
+   "execution_count": 12,
+   "id": "da71d82b-d268-4b9c-bfc4-e2a3e7580c38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.5673907444456746e-17,\n",
+       " -3.469446951953614e-18,\n",
+       " 1.9503102460948876e-33,\n",
+       " 2.5494277617600177e-34,\n",
+       " 3.552713678800501e-15,\n",
+       " 0.0]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "co = jl.find_closed_orbit(fodo)\n",
-    "v0 = co.u"
+    "co = [t.orbit_x[0], t.orbit_px[0], t.orbit_y[0], t.orbit_py[0], t.orbit_z[0], t.orbit_pz[0]]\n",
+    "co"
    ]
   },
   {
@@ -229,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "id": "158da855",
    "metadata": {},
    "outputs": [],
@@ -247,10 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "b8035fae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: `vars` is deprecated, use the @vars macro instead.\n",
+      "│   caller = pyjlany_call(self::typeof(vars), args_::Py, kwargs_::Py) at any.jl:47\n",
+      "└ @ PythonCall.JlWrap ~/.julia/packages/PythonCall/L4cjh/src/JlWrap/any.jl:47\n"
+     ]
+    }
+   ],
    "source": [
     "# Then get a vector of `TPS`s representing an identity of the variables:\n",
     "dv = jl.vars(D2) # Think of these as unit \"wiggles\"\n",
@@ -270,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "id": "1d9f7c33",
    "metadata": {},
    "outputs": [
@@ -290,62 +316,115 @@
       "Descriptor(NV=6, MO=2)\n",
       " Index Coefficient                Order   Exponent\n",
       "--------------------------------------------------------------------\n",
+      "   1:   2.5673907444456746e-17      0      0   0   0   0   0   0\n",
       "   1:  -1.5014406748569284e+00      1      1   0   0   0   0   0\n",
       "   1:   2.4337323961276095e+01      1      0   1   0   0   0   0\n",
+      "   1:   3.0902218513873479e-16      1      0   0   1   0   0   0\n",
+      "   1:   1.1862399218856096e-15      1      0   0   0   1   0   0\n",
       "   1:   4.6559967240029487e-01      1      0   0   0   0   0   1\n",
       "   1:  -2.1624629039941584e-01      2      2   0   0   0   0   0\n",
       "   1:  -5.9739097567507493e-01      2      1   1   0   0   0   0\n",
       "   1:   6.0045879718470401e+00      2      0   2   0   0   0   0\n",
+      "   1:   2.0259254391159418e-17      2      1   0   1   0   0   0\n",
+      "   1:   3.6346854686241299e-17      2      0   1   1   0   0   0\n",
       "   1:  -7.3954551315820696e-02      2      0   0   2   0   0   0\n",
+      "   1:   9.5315805435515612e-18      2      1   0   0   1   0   0\n",
+      "   1:   9.5877497795269650e-17      2      0   1   0   1   0   0\n",
       "   1:  -2.3689760676231550e+00      2      0   0   1   1   0   0\n",
       "   1:  -5.2327062138421629e+00      2      0   0   0   2   0   0\n",
       "   1:   3.8112249845238524e+00      2      1   0   0   0   0   1\n",
       "   1:  -3.2492213276665638e+01      2      0   1   0   0   0   1\n",
+      "   1:  -4.7920330968023451e-16      2      0   0   1   0   0   1\n",
+      "   1:  -2.4127154389007992e-15      2      0   0   0   1   0   1\n",
       "   1:  -5.7202779308232898e-01      2      0   0   0   0   0   2\n",
       "--------------------------------------------------------------------\n",
+      "   2:  -3.4694469519536142e-18      0      0   0   0   0   0   0\n",
       "   2:  -1.7397295890500816e-01      1      1   0   0   0   0   0\n",
       "   2:   2.1539554079824854e+00      1      0   1   0   0   0   0\n",
+      "   2:   4.0393024003251738e-17      1      0   0   1   0   0   0\n",
+      "   2:   1.5507898776475879e-16      1      0   0   0   1   0   0\n",
       "   2:   6.1482849956368352e-02      1      0   0   0   0   0   1\n",
       "   2:  -1.9722870913301199e-02      2      2   0   0   0   0   0\n",
       "   2:  -5.0282247259354089e-02      2      1   1   0   0   0   0\n",
       "   2:   6.7476981448001927e-01      2      0   2   0   0   0   0\n",
+      "   2:   2.9279449552972185e-18      2      1   0   1   0   0   0\n",
+      "   2:   8.0243070091775161e-19      2      0   1   1   0   0   0\n",
       "   2:  -2.2745161470257270e-02      2      0   0   2   0   0   0\n",
+      "   2:   2.3366295028067268e-18      2      1   0   0   1   0   0\n",
+      "   2:  -3.4623545717189121e-18      2      0   1   0   1   0   0\n",
       "   2:  -3.3723372881227109e-01      2      0   0   1   1   0   0\n",
       "   2:  -7.1343301607080045e-01      2      0   0   0   2   0   0\n",
       "   2:   1.7345231288692578e-01      2      1   0   0   0   0   1\n",
       "   2:  -1.1088836056618629e+00      2      0   1   0   0   0   1\n",
+      "   2:  -2.2321958047504711e-17      2      0   0   1   0   0   1\n",
+      "   2:  -1.6063174858953920e-16      2      0   0   0   1   0   1\n",
       "   2:  -1.3965963035470819e-02      2      0   0   0   0   0   2\n",
       "--------------------------------------------------------------------\n",
+      "   3:   1.9503102460948876e-33      0      0   0   0   0   0   0\n",
+      "   3:  -2.3927261957155002e-17      1      1   0   0   0   0   0\n",
+      "   3:   1.1038748331200114e-15      1      0   1   0   0   0   0\n",
       "   3:   8.6857893743585524e-01      1      0   0   1   0   0   0\n",
       "   3:   6.8131679885373284e+00      1      0   0   0   1   0   0\n",
+      "   3:   1.2867286114383261e-17      1      0   0   0   0   0   1\n",
+      "   3:  -9.8382803980890678e-18      2      2   0   0   0   0   0\n",
+      "   3:  -1.2042156058859378e-17      2      1   1   0   0   0   0\n",
+      "   3:  -2.3470654542006775e-18      2      0   2   0   0   0   0\n",
       "   3:   2.0820966400777624e-01      2      1   0   1   0   0   0\n",
       "   3:  -2.6756654190446780e+00      2      0   1   1   0   0   0\n",
+      "   3:   6.5335351414440528e-18      2      0   0   2   0   0   0\n",
       "   3:   3.6240773616285304e-01      2      1   0   0   1   0   0\n",
       "   3:  -1.0570001099680727e+01      2      0   1   0   1   0   0\n",
+      "   3:  -2.5880277039527031e-17      2      0   0   1   1   0   0\n",
+      "   3:  -7.2050602930178200e-17      2      0   0   0   2   0   0\n",
+      "   3:   1.8632928742761530e-16      2      1   0   0   0   0   1\n",
+      "   3:  -2.1667494559807967e-15      2      0   1   0   0   0   1\n",
       "   3:   1.4140740187800873e+00      2      0   0   1   0   0   1\n",
       "   3:   2.2604678416660864e+00      2      0   0   0   1   0   1\n",
+      "   3:  -2.5732412126539622e-17      2      0   0   0   0   0   2\n",
       "--------------------------------------------------------------------\n",
+      "   4:   2.5494277617600177e-34      0      0   0   0   0   0   0\n",
+      "   4:  -3.1351618188348685e-18      1      1   0   0   0   0   0\n",
+      "   4:   1.4434565082821014e-16      1      0   1   0   0   0   0\n",
       "   4:  -1.7398939290416998e-01      1      0   0   1   0   0   0\n",
       "   4:  -2.1347393321223374e-01      1      0   0   0   1   0   0\n",
+      "   4:   1.6831903456569136e-18      1      0   0   0   0   0   1\n",
+      "   4:  -1.2952683507913980e-18      2      2   0   0   0   0   0\n",
+      "   4:  -1.0010453721889786e-18      2      1   1   0   0   0   0\n",
+      "   4:  -8.1487087223193381e-18      2      0   2   0   0   0   0\n",
       "   4:   7.3022308400481958e-03      2      1   0   1   0   0   0\n",
       "   4:  -3.7185533658269149e-01      2      0   1   1   0   0   0\n",
+      "   4:   9.1558495150012200e-19      2      0   0   2   0   0   0\n",
       "   4:   3.5855761603031715e-02      2      1   0   0   1   0   0\n",
       "   4:  -1.4571267707018307e+00      2      0   1   0   1   0   0\n",
+      "   4:  -3.1474466339308438e-18      2      0   0   1   1   0   0\n",
+      "   4:  -9.4147249692288701e-18      2      0   0   0   2   0   0\n",
+      "   4:   2.1243787128435713e-17      2      1   0   0   0   0   1\n",
+      "   4:  -1.3920113956595321e-16      2      0   1   0   0   0   1\n",
       "   4:   1.6947583964386848e-01      2      0   0   1   0   0   1\n",
       "   4:   1.2241119774585181e+00      2      0   0   0   1   0   1\n",
+      "   4:  -1.6843704085384344e-18      2      0   0   0   0   0   2\n",
       "--------------------------------------------------------------------\n",
+      "   5:   3.5527136788005009e-15      0      0   0   0   0   0   0\n",
       "   5:   1.1311099057935241e-02      1      1   0   0   0   0   0\n",
       "   5:  -4.9344710512917722e-01      1      0   1   0   0   0   0\n",
+      "   5:  -3.8933408802014251e-18      1      0   0   1   0   0   0\n",
+      "   5:  -1.4943373988355360e-17      1      0   0   0   1   0   0\n",
       "   5:   1.0000000000000000e+00      1      0   0   0   0   1   0\n",
       "   5:  -6.9454818941118261e-03      1      0   0   0   0   0   1\n",
       "   5:  -1.9719838895671135e-01      2      2   0   0   0   0   0\n",
       "   5:   4.0011614377625913e+00      2      1   1   0   0   0   0\n",
       "   5:  -2.1554766055882183e+01      2      0   2   0   0   0   0\n",
+      "   5:   4.9336220796246548e-17      2      1   0   1   0   0   0\n",
+      "   5:  -4.7403272715040173e-16      2      0   1   1   0   0   0\n",
       "   5:  -2.0266171553111639e-01      2      0   0   2   0   0   0\n",
+      "   5:   2.0112418871060279e-16      2      1   0   0   1   0   0\n",
+      "   5:  -2.3209771029334907e-15      2      0   1   0   1   0   0\n",
       "   5:  -1.4678998216757262e+00      2      0   0   1   1   0   0\n",
       "   5:  -4.4217682376835699e+00      2      0   0   0   2   0   0\n",
       "   5:   3.5309717306444563e-03      2      1   0   0   0   0   1\n",
       "   5:  -3.0303835308768656e-01      2      0   1   0   0   0   1\n",
+      "   5:  -6.8297018611890651e-18      2      0   0   1   0   0   1\n",
+      "   5:  -2.4850087697338867e-17      2      0   0   0   1   0   1\n",
       "   5:  -1.9110915509567084e-03      2      0   0   0   0   0   2\n",
       "--------------------------------------------------------------------\n",
       "   6:   1.0000000000000000e+00      1      0   0   0   0   0   1\n",
@@ -373,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "id": "bde7fdc3",
    "metadata": {},
    "outputs": [
@@ -405,7 +484,7 @@
        "0.0\t0.0\t0.0\t0.0\t0.0\t1.0\n"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "07d6365a",
    "metadata": {},
    "outputs": [],
@@ -470,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "id": "c062c4d2",
    "metadata": {},
    "outputs": [
@@ -502,7 +581,7 @@
        "0.0\t0.0\t0.0\t0.0\t0.0\t1.0\n"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "id": "eb00add2",
    "metadata": {},
    "outputs": [
@@ -586,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "id": "d0cb4300",
    "metadata": {},
    "outputs": [
@@ -616,7 +695,7 @@
        "\n"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
