--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# This only needs to be done once\n",
     "import Pkg; \n",
-    "Pkg.add(url=\"https://github.com/bmad-sim/SciBmad.jl\")\n",
+    "Pkg.add(\"SciBmad\")\n",
     "Pkg.add(\"Plots\")"
    ]
   },
