--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -35,9 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling SciBmad [7bf6e793-a2ec-421f-8700-d1465381ee80] (cache misses: include_dependency fsize change (10), incompatible header (2))\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSetting bunch.species = AtomicAndPhysicalConstants.Species(\"electron\", -1 e, 0.51099895069 MeV c^-2, 0.5 h_bar, -9.2847646917e-24 J T^-1, 0.0, AtomicAndPhysicalConstants.Kind.LEPTON) (reference species from the Beamline)\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSetting bunch.R_ref = -60.04153711147289 (reference R_ref from the Beamline)\n"
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling SciBmad [7bf6e793-a2ec-421f-8700-d1465381ee80] (cache misses: include_dependency fsize change (10), incompatible header (2))\n"
      ]
     }
    ],
