--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -30,7 +30,101 @@
    "execution_count": 1,
    "id": "b2fdafd8-d21e-4652-ae5a-5dcfa5a45539",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling SciBmad [7bf6e793-a2ec-421f-8700-d1465381ee80] (cache misses: wrong dep version loaded (6), incompatible header (2), dep uuid changed (2))\n",
+      "\u001b[91m\u001b[1mERROR: \u001b[22m\u001b[39mLoadError: At least one orbital eigenmode is linearly unstable!\n",
+      "Stacktrace:\n",
+      "  [1] \u001b[0m\u001b[1merror\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90ms\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4merror.jl:35\u001b[24m\u001b[39m\n",
+      "  [2] \u001b[0m\u001b[1mlow_mat_eigen!\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mF\u001b[39m::\u001b[0mLinearAlgebra.Eigen\u001b[90m{ComplexF64, ComplexF64, StaticArraysCore.MMatrix{6, 6, ComplexF64, 36}, StaticArraysCore.MVector{6, ComplexF64}}\u001b[39m, \u001b[90msort\u001b[39m::\u001b[0mBool, \u001b[90mphase_modes\u001b[39m::\u001b[0mBool, \u001b[90merror_unstable\u001b[39m::\u001b[0mBool\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[35mNonlinearNormalForm\u001b[39m \u001b[90m~/.julia/packages/NonlinearNormalForm/eYsN4/src/\u001b[39m\u001b[90m\u001b[4mmatrix.jl:62\u001b[24m\u001b[39m\n",
+      "  [3] \u001b[0m\u001b[1mmat_eigen\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mmat\u001b[39m::\u001b[0mStaticArraysCore.SMatrix\u001b[90m{6, 6, Float64, 36}\u001b[39m; \u001b[90msort\u001b[39m::\u001b[0mBool, \u001b[90mphase_modes\u001b[39m::\u001b[0mBool, \u001b[90merror_unstable\u001b[39m::\u001b[0mBool\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[35mNonlinearNormalForm\u001b[39m \u001b[90m~/.julia/packages/NonlinearNormalForm/eYsN4/src/\u001b[39m\u001b[90m\u001b[4mmatrix.jl:26\u001b[24m\u001b[39m\n",
+      "  [4] \u001b[0m\u001b[1mmat_eigen\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/NonlinearNormalForm/eYsN4/src/\u001b[39m\u001b[90m\u001b[4mmatrix.jl:23\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [5] \u001b[0m\u001b[1mnormal\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mm\u001b[39m::\u001b[0mNonlinearNormalForm.DAMap\u001b[90m{StaticArraysCore.MVector{6, Float64}, StaticArraysCore.MVector{6, GTPSA.TPS64{GTPSA.Dynamic}}, Nothing, Nothing}\u001b[39m, \u001b[90morder\u001b[39m::\u001b[0mInt64; \u001b[90mres\u001b[39m::\u001b[0mNothing, \u001b[90mspin_res\u001b[39m::\u001b[0mNothing\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[35mNonlinearNormalForm\u001b[39m \u001b[90m~/.julia/packages/NonlinearNormalForm/eYsN4/src/\u001b[39m\u001b[90m\u001b[4mnormal.jl:101\u001b[24m\u001b[39m\n",
+      "  [6] \u001b[0m\u001b[1mnormal\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/NonlinearNormalForm/eYsN4/src/\u001b[39m\u001b[90m\u001b[4mnormal.jl:8\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [7] \u001b[0m\u001b[1mnormal\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mm\u001b[39m::\u001b[0mNonlinearNormalForm.DAMap\u001b[90m{StaticArraysCore.MVector{6, Float64}, StaticArraysCore.MVector{6, GTPSA.TPS64{GTPSA.Dynamic}}, Nothing, Nothing}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[35mNonlinearNormalForm\u001b[39m \u001b[90m~/.julia/packages/NonlinearNormalForm/eYsN4/src/\u001b[39m\u001b[90m\u001b[4mnormal.jl:8\u001b[24m\u001b[39m\n",
+      "  [8] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/dev/SciBmad/src/\u001b[39m\u001b[90m\u001b[4mSciBmad.jl:321\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [9] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/PrecompileTools/L8A3n/src/\u001b[39m\u001b[90m\u001b[4mworkloads.jl:78\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [10] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/dev/SciBmad/src/\u001b[39m\u001b[90m\u001b[4mSciBmad.jl:291\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [11] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/PrecompileTools/L8A3n/src/\u001b[39m\u001b[90m\u001b[4mworkloads.jl:140\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [12] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/dev/SciBmad/src/\u001b[39m\u001b[90m\u001b[4mSciBmad.jl:290\u001b[24m\u001b[39m\n",
+      " [13] \u001b[0m\u001b[1minclude\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mBase.jl:562\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [14] \u001b[0m\u001b[1minclude_package_for_output\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90minput\u001b[39m::\u001b[0mString, \u001b[90mdepot_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mdl_load_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mload_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mconcrete_deps\u001b[39m::\u001b[0mVector\u001b[90m{Pair{Base.PkgId, UInt128}}\u001b[39m, \u001b[90msource\u001b[39m::\u001b[0mNothing\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2881\u001b[24m\u001b[39m\n",
+      " [15] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m\u001b[4mstdin:6\u001b[24m\u001b[39m\n",
+      "in expression starting at /home/matt/.julia/dev/SciBmad/src/SciBmad.jl:1\n",
+      "in expression starting at stdin:6\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "Failed to precompile SciBmad [7bf6e793-a2ec-421f-8700-d1465381ee80] to \"/home/matt/.julia/compiled/v1.11/SciBmad/jl_SX18OF\".",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile SciBmad [7bf6e793-a2ec-421f-8700-d1465381ee80] to \"/home/matt/.julia/compiled/v1.11/SciBmad/jl_SX18OF\".",
+      "",
+      "Stacktrace:",
+      "  [1] \u001b[0m\u001b[1merror\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90ms\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4merror.jl:35\u001b[24m\u001b[39m",
+      "  [2] \u001b[0m\u001b[1mcompilecache\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90mpath\u001b[39m::\u001b[0mString, \u001b[90minternal_stderr\u001b[39m::\u001b[0mIO, \u001b[90minternal_stdout\u001b[39m::\u001b[0mIO, \u001b[90mkeep_loaded_modules\u001b[39m::\u001b[0mBool; \u001b[90mflags\u001b[39m::\u001b[0mCmd, \u001b[90mcacheflags\u001b[39m::\u001b[0mBase.CacheFlags, \u001b[90mreasons\u001b[39m::\u001b[0mDict\u001b[90m{String, Int64}\u001b[39m, \u001b[90mloadable_exts\u001b[39m::\u001b[0mNothing\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:3174\u001b[24m\u001b[39m",
+      "  [3] \u001b[0m\u001b[1m(::Base.var\"#1110#1111\"{Base.PkgId})\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2579\u001b[24m\u001b[39m",
+      "  [4] \u001b[0m\u001b[1mmkpidlock\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mf\u001b[39m::\u001b[0mBase.var\"#1110#1111\"\u001b[90m{Base.PkgId}\u001b[39m, \u001b[90mat\u001b[39m::\u001b[0mString, \u001b[90mpid\u001b[39m::\u001b[0mInt32; \u001b[90mkwopts\u001b[39m::\u001b[0m@Kwargs\u001b[90m{stale_age::Int64, wait::Bool}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[35mFileWatching.Pidfile\u001b[39m \u001b[90m~/.julia/juliaup/julia-1.11.6+0.x64.linux.gnu/share/julia/stdlib/v1.11/FileWatching/src/\u001b[39m\u001b[90m\u001b[4mpidfile.jl:95\u001b[24m\u001b[39m",
+      "  [5] \u001b[0m\u001b[1m#mkpidlock#6\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/juliaup/julia-1.11.6+0.x64.linux.gnu/share/julia/stdlib/v1.11/FileWatching/src/\u001b[39m\u001b[90m\u001b[4mpidfile.jl:90\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      "  [6] \u001b[0m\u001b[1mtrymkpidlock\u001b[22m\u001b[0m\u001b[1m(\u001b[22m::\u001b[0mFunction, ::\u001b[0mVararg\u001b[90m{Any}\u001b[39m; \u001b[90mkwargs\u001b[39m::\u001b[0m@Kwargs\u001b[90m{stale_age::Int64}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[35mFileWatching.Pidfile\u001b[39m \u001b[90m~/.julia/juliaup/julia-1.11.6+0.x64.linux.gnu/share/julia/stdlib/v1.11/FileWatching/src/\u001b[39m\u001b[90m\u001b[4mpidfile.jl:116\u001b[24m\u001b[39m",
+      "  [7] \u001b[0m\u001b[1m#invokelatest#2\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:1057\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      "  [8] \u001b[0m\u001b[1minvokelatest\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:1052\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      "  [9] \u001b[0m\u001b[1mmaybe_cachefile_lock\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mf\u001b[39m::\u001b[0mBase.var\"#1110#1111\"\u001b[90m{Base.PkgId}\u001b[39m, \u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90msrcpath\u001b[39m::\u001b[0mString; \u001b[90mstale_age\u001b[39m::\u001b[0mInt64\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:3698\u001b[24m\u001b[39m",
+      " [10] \u001b[0m\u001b[1mmaybe_cachefile_lock\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:3695\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [11] \u001b[0m\u001b[1m_require\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2565\u001b[24m\u001b[39m",
+      " [12] \u001b[0m\u001b[1m__require_prelocked\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90muuidkey\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2388\u001b[24m\u001b[39m",
+      " [13] \u001b[0m\u001b[1m#invoke_in_world#3\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:1089\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [14] \u001b[0m\u001b[1minvoke_in_world\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:1086\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [15] \u001b[0m\u001b[1m_require_prelocked\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90muuidkey\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2375\u001b[24m\u001b[39m",
+      " [16] \u001b[0m\u001b[1mmacro expansion\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2314\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [17] \u001b[0m\u001b[1mmacro expansion\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mlock.jl:273\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [18] \u001b[0m\u001b[1m__require\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90minto\u001b[39m::\u001b[0mModule, \u001b[90mmod\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2271\u001b[24m\u001b[39m",
+      " [19] \u001b[0m\u001b[1m#invoke_in_world#3\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:1089\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [20] \u001b[0m\u001b[1minvoke_in_world\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:1086\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
+      " [21] \u001b[0m\u001b[1mrequire\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90minto\u001b[39m::\u001b[0mModule, \u001b[90mmod\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2260\u001b[24m\u001b[39m"
+     ]
+    }
+   ],
    "source": [
     "using SciBmad"
    ]
