Added warning for CairoMakie slowness.

--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -252,6 +252,8 @@
     }
    ],
    "source": [
+    "# WARNING! CairoMakie installation is slow (~15 min)! ONLY RUN THIS CELL IF YOU HAVE THE TIME.\n",
+    "#=============================================================================================\n",
     "# Pkg.add(\"CairoMakie\") # More powerful plotting package\n",
     "# Pkg.add(\"LaTeXStrings\") # For plotting with LaTeX formatting\n",
     "using CairoMakie: CairoMakie as CM\n",
@@ -797,15 +799,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia Global Project (8 threads) 1.10.10",
+   "display_name": "Julia 1.11.7",
    "language": "julia",
-   "name": "julia-global-project-_8-threads_-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.10"
+   "version": "1.11.7"
   }
  },
  "nbformat": 4,
