--- a/examples/dynamic-aperture.ipynb
+++ b/examples/dynamic-aperture.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "# Turn on radiation damping, do 2nd order Yoshida for speed\n",
-    "foreach(t->t.tracking_method=SciBmad.Yoshida(order=2, radiation_damping_on=true), ring.line)\n",
+    "foreach(t->t.tracking_method=Yoshida(order=2, radiation_damping_on=true), ring.line)\n",
     "\n",
     "# Twiss:\n",
     "t = twiss(ring)\n",
@@ -232,7 +232,7 @@
     }
    ],
    "source": [
-    "foreach(t->t.tracking_method=SciBmad.Yoshida(order=2, radiation_damping_on=true, radiation_fluctuations_on=true), ring.line)\n",
+    "foreach(t->t.tracking_method=Yoshida(order=2, radiation_damping_on=true, radiation_fluctuations_on=true), ring.line)\n",
     "#@time begin\n",
     "N_turns = 2000\n",
     "for i in 1:N_turns\n",
