--- a/examples/orbit-correction.ipynb
+++ b/examples/orbit-correction.ipynb
@@ -5,19 +5,9 @@
    "execution_count": 1,
    "id": "ee4adde8-84a7-412d-a317-a2386a81c73e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m packages...\n",
-      "  54823.3 ms\u001b[32m  ✓ \u001b[39mSciBmad\n",
-      "  1 dependency successfully precompiled in 55 seconds. 118 already precompiled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "using SciBmad, CairoMakie"
+    "using SciBmad, CairoMakie, BenchmarkTools"
    ]
   },
   {
@@ -32,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "da3b2748-20e8-43d7-a490-d5974ea10267",
    "metadata": {},
    "outputs": [
@@ -40,72 +30,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.361491 seconds (5.12 M allocations: 276.842 MiB, 32.15% gc time)\n"
+      "  0.368180 seconds (5.55 M allocations: 306.743 MiB, 10.26% gc time, 29.85% compilation time: 92% of which was recompilation)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Table with 19 columns and 6271 rows:\n",
-       "      s        phi_1                 beta_1    alpha_1     ⋯\n",
-       "    ┌───────────────────────────────────────────────────────\n",
-       " 1  │ 0.0      TPS64{Dynamic}:\n",
-       "Desc…  0.589999  3.91401e-7  ⋯\n",
-       " 2  │ 0.0      TPS64{Dynamic}:\n",
-       "Desc…  0.589999  3.91401e-7  ⋯\n",
-       " 3  │ 5.3      TPS64{Dynamic}:\n",
-       "Desc…  48.2002   -8.98306    ⋯\n",
-       " 4  │ 7.1      TPS64{Dynamic}:\n",
-       "Desc…  151.952   -62.3102    ⋯\n",
-       " 5  │ 7.6      TPS64{Dynamic}:\n",
-       "Desc…  220.652   -75.0891    ⋯\n",
-       " 6  │ 9.0      TPS64{Dynamic}:\n",
-       "Desc…  333.073   7.01033     ⋯\n",
-       " 7  │ 16.75    TPS64{Dynamic}:\n",
-       "Desc…  233.455   5.84355     ⋯\n",
-       " 8  │ 22.2501  TPS64{Dynamic}:\n",
-       "Desc…  173.733   5.01556     ⋯\n",
-       " 9  │ 42.0647  TPS64{Dynamic}:\n",
-       "Desc…  34.08     2.03244     ⋯\n",
-       " 10 │ 42.3147  TPS64{Dynamic}:\n",
-       "Desc…  33.0731   1.9948      ⋯\n",
-       " 11 │ 42.4647  TPS64{Dynamic}:\n",
-       "Desc…  32.4781   1.97222     ⋯\n",
-       " 12 │ 43.0647  TPS64{Dynamic}:\n",
-       "Desc…  30.9912   0.527708    ⋯\n",
-       " 13 │ 46.5647  TPS64{Dynamic}:\n",
-       "Desc…  27.8026   0.383323    ⋯\n",
-       " 14 │ 46.8147  TPS64{Dynamic}:\n",
-       "Desc…  27.6135   0.37301     ⋯\n",
-       " 15 │ 46.9647  TPS64{Dynamic}:\n",
-       "Desc…  27.5026   0.366822    ⋯\n",
-       " 16 │ 47.5647  TPS64{Dynamic}:\n",
-       "Desc…  24.9206   3.81899     ⋯\n",
-       " 17 │ 51.0647  TPS64{Dynamic}:\n",
-       "Desc…  5.84847   1.63018     ⋯\n",
-       " 18 │ 51.3147  TPS64{Dynamic}:\n",
-       "Desc…  5.07247   1.47384     ⋯\n",
-       " 19 │ 51.4647  TPS64{Dynamic}:\n",
-       "Desc…  4.64439   1.38003     ⋯\n",
-       " 20 │ 52.0647  TPS64{Dynamic}:\n",
-       "Desc…  3.17543   1.0596      ⋯\n",
-       " 21 │ 53.219   TPS64{Dynamic}:\n",
-       "Desc…  1.61994   0.28796     ⋯\n",
-       " 22 │ 54.1104  TPS64{Dynamic}:\n",
-       "Desc…  1.63775   -0.307934   ⋯\n",
-       " 23 │ 55.2647  TPS64{Dynamic}:\n",
-       "Desc…  3.23935   -1.07957    ⋯\n",
-       " ⋮  │    ⋮              ⋮               ⋮          ⋮       ⋱"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time t = twiss(ring)"
+    "@time twiss(ring);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48618b47-6a74-405d-8eb1-c7c0de27c29d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
